classDiagram

%% =========================
%% Authentication System
%% =========================

    class User {
        -UUID userId
        -String email
        -String passwordHash
        -String firstName
        -String lastName
        +updateProfile()
    }

    class Role {
        -UUID roleId
        -String roleName
    }

    class Session {
        -UUID sessionId
        -String accessToken
        -DateTime expiresAt
        +isValid()
    }

    class AuthenticationService {
        <<interface>>
        +authenticate(email, password)
        +logout(sessionId)
        +refreshSession(sessionId)
    }

    class UserRepository {
        <<interface>>
        +save(user)
        +findById(userId)
        +findByEmail(email)
    }

    class PasswordAuthenticationService {
        -UserRepository userRepository
        +authenticate(email, password)
        +logout(sessionId)
        +refreshSession(sessionId)
    }

    class DatabaseUserRepository {
        +save(user)
        +findById(userId)
        +findByEmail(email)
    }

%% =========================
%% Relationships
%% =========================

    User "1" --> "0..*" Session : creates
    User "0..*" --> "0..*" Role : assigned

    PasswordAuthenticationService ..|> AuthenticationService
    DatabaseUserRepository ..|> UserRepository
    PasswordAuthenticationService --> UserRepository
